@@ -1,3 +1,7 @@
+2000-07-11  Dan Winship  <danw@helixcode.com>
+
+	* Update for CamelFolder API changes
+
 2000-07-10  Dan Winship  <danw@helixcode.com>
 
 	* folder-browser-factory.c (control_activate): Work with both
