@@ -1,3 +1,7 @@
+2000-07-11  Dan Winship  <danw@helixcode.com>
+
+	* filter-driver.c: Update for CamelFolder API changes
+
 2000-07-09  Dan Winship  <danw@helixcode.com>
 
 	* filter-xml.[ch]: add a "string" type
